--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "parser": "babel-parser"
   },
   "browserslist": {
     "production": [
@@ -34,5 +31,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-naver": "^2.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.8.1"
   }
 }
