--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "no-console": 1,
     "react-hooks/exhaustive-deps": 0,
-    "no-unused-expression": 0
+    "no-unused-expression": 0,
+    "no-unused-vars": 1
   }
 }
