--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-intersection-observer": "^9.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.4",
     "web-vitals": "^2.1.4"
@@ -43,6 +42,7 @@
   "devDependencies": {
     "eslint-config-naver": "^2.1.0",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "2.8.1"
+    "prettier": "2.8.1",
+    "react-scripts": "^5.0.1"
   }
 }
